# php-site-package

./: README.md  index.html  package-lock.json  package.json
docs/: demo-guide.md  development-progress.md  final-summary.md  medium-term-progress.md  short-term-progress.md
examples/laravel-demo/: artisan  composer.json
examples/laravel-demo/public/: index.php
examples/simple-php/: index.php
examples/wordpress-demo/: index.php  wp-config-sample.php
scripts/: dev.sh  test-backend.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AIAssistant.tsx  AdvancedBuildConfig.tsx  DependencyManager.tsx  DirectoryBrowser.tsx  EnvironmentIndicator.tsx  HelpSystem.tsx  LogViewer.tsx  PerformanceMonitor.tsx  ProjectConfigModal.tsx  RealTimeCollaboration.tsx  Sidebar.tsx  TeamManagement.tsx  ThemeSettings.tsx  VersionControl.tsx
src/data/: mockFileSystem.ts
src/hooks/: useMessage.ts
src/pages/: BuildConfig.tsx  BuildProcess.tsx  DebugConsole.tsx  PluginManager.tsx  ProjectManager.tsx
src/store/: usePluginStore.ts  useProjectStore.ts  useThemeStore.ts
src/utils/: environment.ts  tauri.ts
