[package]
name = "php-desktop-packager"
version = "0.1.0"
description = "A professional desktop application for packaging PHP projects"
authors = ["PHP Desktop Packager Team"]
license = "MIT"
repository = "https://github.com/phpdesktop/packager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "path-all", "dialog-save", "dialog-open", "process-relaunch", "process-exit", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
